# bikeshare-demand-gnn

./: .gitattributes  .gitignore  CLUSTERING_README.md  README.md  README_gate_hyperparameter_optimization.md  README_gate_training.md  main.py  map_to_img.py  model.md  plots.ipynb  pyproject.toml  requirements.txt  test_reproducibility.py  training_history.json  upload.md  ~
07r2_dt30_165k_10n_transformer/: model_architecture.json  training_history.json
095r2_dt30_102k_10n_transformer/: model_architecture.json  training_history.json
arr_dep_transformer_091_r2/: training_history.json
arr_dep_transformer_experiment_20250622_192525_089r2/: training_history.json
clustering_analysis/: analysis_report.txt  analysis_summary.json
configs/: README.md  experiment_configs.yaml  gate_experiments.json  gate_experiments_gpu.json
data/clustered/: dataset_metadata.json  generation_summary.txt
data/raw/: sample_trips.csv
dt30_k93_arr_dep_transformer_091_r2/: model_architecture.json
experiment_0_42_r2_transformer/: model_architecture.json  training_history.json
experiment_0_45_r2_transformer/: final_model.pDfolrr4zJ  model_architecture.json  training_history.json
experiment_0_46_r2_transformer/: model_architecture.json  training_history.json
indv/: README.md  evaluation.py  feature_engineering.py  generate_dataset.py  inference.py  main.py  r2_plot.py  test_inference.py  training.py
mlruns/0/: meta.yaml
mlruns/238973579956095307/: meta.yaml
mlruns/238973579956095307/1e9a8e9ce01d4586937236d04e583b38/: meta.yaml
mlruns/238973579956095307/1e9a8e9ce01d4586937236d04e583b38/tags/: mlflow.runName
mlruns/238973579956095307/23f47f3dcb1c43e7a072e22c08f26dd7/: meta.yaml
mlruns/238973579956095307/23f47f3dcb1c43e7a072e22c08f26dd7/tags/: mlflow.runName
mlruns/238973579956095307/40bfd828cbbe4717a2c8d5bb30313f49/: meta.yaml
mlruns/238973579956095307/40bfd828cbbe4717a2c8d5bb30313f49/tags/: mlflow.runName
mlruns/238973579956095307/97b6149a2b4748c992dcb983e8dcc491/: meta.yaml
mlruns/238973579956095307/97b6149a2b4748c992dcb983e8dcc491/tags/: mlflow.runName
mlruns/238973579956095307/b7567819e51e4d41884774f640abc254/: meta.yaml
mlruns/238973579956095307/b7567819e51e4d41884774f640abc254/tags/: mlflow.runName
mlruns/241932271202898537/: meta.yaml
mlruns/302232469108405308/: meta.yaml
mlruns/302232469108405308/7eb29c68a13148c78bf8d0ec5ba4e4e3/: meta.yaml
mlruns/431822443643507357/: meta.yaml
mlruns/434031048596931815/: meta.yaml
mlruns/434031048596931815/125382a251d147c094aec6da945edcd1/: meta.yaml
mlruns/434031048596931815/1c50d07f059847ecae859dcf3436e38b/: meta.yaml
mlruns/434031048596931815/5483ff741a54437ea3d0d223c367bee4/: meta.yaml
mlruns/651829744920549158/: meta.yaml
mlruns/651829744920549158/d39c8fbf6f4f4531936beef83d81cf9d/: meta.yaml
mlruns/684160992861840657/: meta.yaml
mlruns/707436368278635144/: meta.yaml
mlruns/707436368278635144/0fe590c97f3e4911a656801f456b7866/: meta.yaml
mlruns/707436368278635144/bb7432cc002d4ecd9d74562adf4aa9d2/: meta.yaml
mlruns/759431975972160928/: meta.yaml
models/: lgbm_model.joblib
no_cluster_dataset/: dataset_metadata.json  generation_summary.txt
notebooks/: data-analysis.ipynb  data.ipynb  feat_eng.ipynb  model_training.ipynb  neural_network_training.py  open-meteo.ipynb  softmax-ETA.ipynb  train_softmax_ETA.py  training.ipynb
reports/: EcoBiciAI_Paper.tex
results/xgb_default/: xgb_metadata.json
scripts/: README.md  debug_features.py  feature_engineering.py  find_optimal_k.py  generate_cluster_dataset.py  gnn_predict_and_eval.py  inference_online.py  optimize_gate_hyperparameters.py  optuna_gnn_hyperopt.py  plot_r2_por_estacion.py  predict_gnn_to_csv.py  prepare_gnn_dataset.py  prepare_inference_data.py  prepare_temporal_gnn_dataset.py  print_weather_columns.py  push_raw_data.sh  run_gnn_inference.py  test_lag_features.py  test_model.py  train_gate_model.py  train_gnn.py  train_temporal_gnn.py
scripts/deprecated/: analyze_kmeans_optimal_k.py  load_experiment.py  test_model.py
softmax-ETA/: README_GBDT.md  evaluation.py  extract_predictions.py  fast_station_arrivals.py  feat-eng.py  pipeline.py  run_experiments.py  train_baseline.py  train_gbdt.py
src/: __init__.py  analyze_station_consistency.py  build_datasets.py  data_analysis.py  data_pipeline.py  duration_analysis.py  embedding_utils.py  feature_enrichment.py  preprocess.py  station_analysis.py  time_series_rnn.py  train_rnn.py  weather_data.py
src/analysis/: data_analysis.py  station_analytics.py
src/clustering/: __init__.py  cluster_features.py  data_preparation.py  station_clustering.py
src/data/: __init__.py  data_loading.py  data_processing.py  temporal_processing.py  weather_processing.py
src/dataset/: __init__.py  base_dataset.py  explore_clustered_data.py  spatial_temporal_dataset.py  tabular_dataset.py  temporal_graph_dataset.py
src/dataset/deprecated/: gate_dataset.py
src/deprecated/: train_baselines.py  train_xgboost.py
src/deprecated/clustering/: cluster_features.py  data_preparation.py
src/features/: core_pipeline.py  feature_engineering.py  feature_selector.py  weather.py
src/models/: README_GNN.md  __init__.py  base_model.py  bike_dest_eta_enhanced_model.py  catboost_model.py  gated_gcn.py  gbdt_models.py  gnn_arrival_predictor.py  gnn_models.py  loss_functions.py  model_loader.py  multi_model.py  nn_model.py  nn_multihead_model.py
src/notebooks/: baseline.ipynb  baseline_per_station.ipynb  data.ipynb  data_engineer_pipeline.ipynb  data_finetune_pipeline.ipynb  data_preprocess_pipeline.ipynb  feat_eng.ipynb  poster.ipynb  training.ipynb
src/notebooks/clusters/: GRAPH_CLUSTERS.py  cluster_utils.py  creation.ipynb  train_clusters_baseline.ipynb  train_clusters_demand_wide.ipynb
src/plots/: data_plot.py
src/test_data/: test_data.py
src/training/: __init__.py  gate_trainer.py  gnn_trainer.py  main.py  neural_network_training.py  temporal_gnn_trainer.py
src/utils/: embedding_utils.py  path_utils.py  preprocessing_utils.py  spatial_utils.py  system_utils.py  training_logger.py
(+9 files in other folders)
