[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecobici-ai"
version = "0.1.0"
description = "AI-powered bicycle sharing demand prediction system for Buenos Aires"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Juan Francisco Lebrero", email = "lebrerojuanfrancisco@gmail.com"},
]
keywords = [
    "machine-learning",
    "bicycle-sharing",
    "demand-prediction",
    "time-series",
    "transportation",
    "buenos-aires",
    "ecobici",
    "data-science",
    "xgboost",
    "scikit-learn"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=10.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/usuario/EcoBici-AI"
"Bug Reports" = "https://github.com/usuario/EcoBici-AI/issues"
"Source" = "https://github.com/usuario/EcoBici-AI"
"Documentation" = "https://github.com/usuario/EcoBici-AI/blob/main/README.md"

[project.scripts]
ecobici-pipeline = "src.data_pipeline:main"
ecobici-build-datasets = "src.build_datasets:main"
ecobici-train-baselines = "src.train_baselines:main"
ecobici-train-xgboost = "src.train_xgboost:main"
ecobici-train-titans = "src.train_titans:main"

[project.optional-dependencies]
dev = [
    "ecobici-ai[test,lint,docs,notebook]",
    "ipykernel>=6.0.0",
    "optuna>=3.0.0",
    "tensorboard>=2.12.0",
    "holidays>=0.20.0",
    "openmeteo-requests>=0.1.0",
    "requests-cache>=0.9.0",
    "retry-requests>=0.1.0",
    "ipython>=8.0.0",
    "mlflow>=2.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=10.0.0",
    "xgboost>=2.0.0",
    "tqdm>=4.64.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

test = [

]

lint = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "nbsphinx>=0.9.0",
]

notebook = [
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "nbconvert>=7.0.0",
    "nbformat>=5.9.0",
    "jupyterlab-git>=0.44.0",
    "ipywidgets>=8.0.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "notebooks*", "reports*", "data*", "models*"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json", "*.csv", "*.parquet", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | models
  | reports
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["src"]
skip_glob = ["data/*", "models/*", "reports/*"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused-function-args
    "ARG002", # unused-method-args
    "ARG003", # unused-class-method-args
    "ARG004", # unused-static-method-args
    "ARG005", # unused-lambda-args
    "D",   # pydocstyle
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D213", # Multi-line docstring summary should start at the second line
    "D203", # 1 blank line required before class docstring
    "E501", # Line too long (handled by black)
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "data",
    "models", 
    "reports",
    "notebooks",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"tests/**/*.py" = ["D", "ARG", "S101"]

# Configuración de MyPy (verificador de tipos)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "polars.*",
    "sklearn.*",
    "xgboost.*",
    "pyarrow.*",
    "lightgbm.*",
    "catboost.*",
    "optuna.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
]
ignore_missing_imports = true

# Configuración de pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Configuración de coverage
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/conftest.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov" 